Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
3.0.0, 3.0.1, 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.1.4
-
Important
Description
Notation declarations are incorrectly processed/output by AbstractDomParser::notationDecl
XML spec. does not support both PUBLIC and SYSTEM keywords in the same notation declaration. The presence of PUBLIC implies a system notation so the the SYSTEM keyword is redundant and thus not valid. However, the function (AbstractDomParser::notationDecl) ignores this constraint and outputs the SYSTEM keyword even if PUBLIC keyword was already printed.
Attached is a proposed fix (see lines 1667-1697).