XERCESC-2090 - Incorrect Parsing of NOTATION declarations

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1801664 13f79535-47bb-0310-9956-ffa450edef68